mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_return_void.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Cannot return a value from a void function
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_return_void.mux:3:10
   |
 3 |   return 1
   |          ^
